# Highload_Static_Server

./: .gitignore  .static_server.conf  CMakeLists.txt  Dockerfile  Makefile  README.md  kill.sh  server.sh
http-test-suite/: httptest.py
nginx-test/: Dockerfile  nginx.conf
project/config/include/: main_server_settings.h
project/config/src/: main_server_settings.cpp
project/http/include/: http_defines.h  http_file_types.h  http_handle.h
project/http/src/: http_handle.cpp  http_request.cpp
project/logs/include/: define_log.h  static_server_log.h
project/logs/src/: static_server_log.cpp
project/server/include/: static_server.h
project/server/src/: main.cpp  static_server.cpp
project/workers/include/: client_connection.h  worker_process.h
project/workers/src/: client_connection.cpp  worker_process.cpp
settings/: static_server.conf
